--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "bootstrap-icons": "^1.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.4.1",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
